# self_gl

./: .gitignore  CMakeLists.txt  Makefile  Triangle.fragmentshader  Triangle.vertexshader  note.txt  test_gl.c++  test_math.c++
include/: Matrix4.h  ShaderProgramLoader.h  SimpleCheckerboardGenerator.h
lib/: CMakeLists.txt  Makefile  Matrix4.c++  ShaderProgramLoader.c++  SimpleCheckerboardGenerator.c++
shader_program/: Triangle.fragmentshader  Triangle.vertexshader
swig/: Makefile  MyMath.py  MyMath_swig.c++  MyMath_swig.i
